# litentry-pallets

./: Cargo.toml
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs
